--- a/EEC_ICT.Data/EEC_ICT.Data.csproj
+++ b/EEC_ICT.Data/EEC_ICT.Data.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Models\Command.cs" />
     <Compile Include="Models\CommandAssign.cs" />
     <Compile Include="Models\CommandInFunction.cs" />
+    <Compile Include="Models\DM_DapAn.cs" />
     <Compile Include="Models\DM_Topic.cs" />
     <Compile Include="Models\DM_CauHoi.cs" />
     <Compile Include="Models\FileDetail.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CommandInFunctionRepository.cs" />
     <Compile Include="Repository\CommandRepository.cs" />
+    <Compile Include="Repository\DM_DapAnRepository.cs" />
     <Compile Include="Repository\DM_TopicRepository.cs" />
     <Compile Include="Repository\DM_CauHoiRepository.cs" />
     <Compile Include="Repository\FunctionRepository.cs" />
@@ -91,6 +93,7 @@
     <Compile Include="Repository\UsersRepository.cs" />
     <Compile Include="Services\CommandInFunctionServices.cs" />
     <Compile Include="Services\CommandServices.cs" />
+    <Compile Include="Services\DM_DapAnServices.cs" />
     <Compile Include="Services\DM_TopicServices.cs" />
     <Compile Include="Services\DM_CauHoiServices.cs" />
     <Compile Include="Services\FunctionServices.cs" />
