--- a/EEC_ICT.Data/EEC_ICT.Data.csproj
+++ b/EEC_ICT.Data/EEC_ICT.Data.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\Command.cs" />
     <Compile Include="Models\CommandAssign.cs" />
     <Compile Include="Models\CommandInFunction.cs" />
+    <Compile Include="Models\DM_DapAnCheckCorrect_Result.cs" />
     <Compile Include="Models\DM_DapAnCheckCorrect.cs" />
     <Compile Include="Models\DM_DapAn.cs" />
     <Compile Include="Models\DM_Topic.cs" />
