--- a/EEC_ICT.Api/bin/EEC_ICT.Api.dll.config
+++ b/EEC_ICT.Api/bin/EEC_ICT.Api.dll.config
@@ -27,6 +27,7 @@
       </system.Web>
   -->
   <system.web>
+    <customErrors mode="Off"/>
     <compilation targetFramework="4.6.1" debug="true"/>
     <httpRuntime targetFramework="4.6.1" maxRequestLength="2147483647" maxQueryStringLength="32768" maxUrlLength="65536" executionTimeout="1600" requestLengthDiskThreshold="2147483647"/>
   </system.web>
