--- a/EEC_ICT.Data/EEC_ICT.Data.csproj
+++ b/EEC_ICT.Data/EEC_ICT.Data.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\Command.cs" />
     <Compile Include="Models\CommandAssign.cs" />
     <Compile Include="Models\CommandInFunction.cs" />
+    <Compile Include="Models\TestResult.cs" />
     <Compile Include="Models\DM_DapAnCheckCorrect_Result.cs" />
     <Compile Include="Models\DM_DapAnCheckCorrect.cs" />
     <Compile Include="Models\DM_DapAn.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CommandInFunctionRepository.cs" />
     <Compile Include="Repository\CommandRepository.cs" />
+    <Compile Include="Repository\TestResultRepository.cs" />
     <Compile Include="Repository\DM_DapAnRepository.cs" />
     <Compile Include="Repository\DM_TopicRepository.cs" />
     <Compile Include="Repository\DM_CauHoiRepository.cs" />
@@ -96,6 +98,7 @@
     <Compile Include="Repository\UsersRepository.cs" />
     <Compile Include="Services\CommandInFunctionServices.cs" />
     <Compile Include="Services\CommandServices.cs" />
+    <Compile Include="Services\TestResultServices.cs" />
     <Compile Include="Services\DM_DapAnServices.cs" />
     <Compile Include="Services\DM_TopicServices.cs" />
     <Compile Include="Services\DM_CauHoiServices.cs" />
