--- a/EEC_ICT.Api/EEC_ICT.Api.csproj
+++ b/EEC_ICT.Api/EEC_ICT.Api.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Constants\FunctionConstants.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CommandsController.cs" />
+    <Compile Include="Controllers\DM_TestResultsController.cs" />
     <Compile Include="Controllers\DM_TopicController.cs" />
     <Compile Include="Controllers\DM_CauHoiController.cs" />
     <Compile Include="Controllers\FilesController.cs" />
