--- a/EEC_ICT.Data/EEC_ICT.Data.csproj
+++ b/EEC_ICT.Data/EEC_ICT.Data.csproj
@@ -58,12 +58,13 @@
     <Compile Include="Models\Command.cs" />
     <Compile Include="Models\CommandAssign.cs" />
     <Compile Include="Models\CommandInFunction.cs" />
+    <Compile Include="Models\DM_DapAnCheckCorrect_Result.cs" />
     <Compile Include="Models\MultipleChoice.cs" />
     <Compile Include="Models\DM_DeThi.cs" />
     <Compile Include="Models\ResultStatistic.cs" />
     <Compile Include="Models\Enum.cs" />
     <Compile Include="Models\TestResults.cs" />
-    <Compile Include="Models\DM_DapAnCheckCorrect_Result.cs" />
+    <Compile Include="Models\QuestionResults.cs" />
     <Compile Include="Models\DM_DapAnCheckCorrect.cs" />
     <Compile Include="Models\DM_Topic.cs" />
     <Compile Include="Models\DM_CauHoi.cs" />
@@ -89,9 +90,9 @@
     <Compile Include="Repository\CommandInFunctionRepository.cs" />
     <Compile Include="Repository\CommandRepository.cs" />
     <Compile Include="Repository\DM_DeThiRepository.cs" />
-    <Compile Include="Repository\DM_TestGroupRepository.cs" />
-    <Compile Include="Repository\TestResultRepository.cs" />
     <Compile Include="Repository\DM_TopicRepository.cs" />
+    <Compile Include="Repository\TestResultRepository.cs" />
+    <Compile Include="Repository\QuestionResultsRepository.cs" />
     <Compile Include="Repository\DM_CauHoiRepository.cs" />
     <Compile Include="Repository\FunctionRepository.cs" />
     <Compile Include="Repository\LogsRepository.cs" />
@@ -103,7 +104,6 @@
     <Compile Include="Services\CommandInFunctionServices.cs" />
     <Compile Include="Services\CommandServices.cs" />
     <Compile Include="Services\DM_DeThiServices.cs" />
-    <Compile Include="Services\DM_TestGroupServices.cs" />
     <Compile Include="Services\TestResultsServices.cs" />
     <Compile Include="Services\DM_TopicServices.cs" />
     <Compile Include="Services\DM_CauHoiServices.cs" />
